
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct git_cred {int dummy; } ;
struct TYPE_3__ {struct TYPE_3__* username; } ;
typedef TYPE_1__ git_cred_ssh_interactive ;


 int git__free (TYPE_1__*) ;

__attribute__((used)) static void ssh_interactive_free(struct git_cred *cred)
{
 git_cred_ssh_interactive *c = (git_cred_ssh_interactive *)cred;

 git__free(c->username);

 git__free(c);
}
