; ModuleID = '/home/carl/AnghaBench/libgit2/src/transports/extr_cred.c_ssh_interactive_free.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/transports/extr_cred.c_ssh_interactive_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.git_cred = type { i32 }
%struct.TYPE_3__ = type { %struct.TYPE_3__* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.git_cred*)* @ssh_interactive_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ssh_interactive_free(%struct.git_cred* %0) #0 {
  %2 = alloca %struct.git_cred*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.git_cred* %0, %struct.git_cred** %2, align 8
  %4 = load %struct.git_cred*, %struct.git_cred** %2, align 8
  %5 = bitcast %struct.git_cred* %4 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %3, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %9 = call i32 @git__free(%struct.TYPE_3__* %8)
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = call i32 @git__free(%struct.TYPE_3__* %10)
  ret void
}

declare dso_local i32 @git__free(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
